fix layout issue

--- a/youniverse/components/SignUpModal.module.css
+++ b/youniverse/components/SignUpModal.module.css
@@ -1,7 +1,6 @@
 .modal {
     width: 20rem;
     max-height: 90%;
-    overflow-y: auto;
     padding: 1rem;
     border-radius: 0.5rem;
     border: 5px solid #0831B4;
@@ -23,7 +22,6 @@
     color: #0831B4;
     font-size: 2rem;
     font-weight: 700;
-    line-height: 3rem;
     margin: 0;
     }
 
@@ -58,19 +56,19 @@
     }
 
 .modal__footer{
-    margin: 0 0.5rem; 
+    margin: 1rem; 
     display: flex;
     align-items: center;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
     }
 
 .modal__input:focus {
     outline: none;
     border: 5px solid #0831B4;
 }
-/* [from code tutor] to remove broswer default border selection styling from input text box */
+/* [from code tutor (lines 67 to 70]: to remove broswer default border selection styling from input text box */
 
 .modal__input:hover {
     border: 5px solid #0831B4; 
 }
-/* [from code tutor] to remove broswer default border selection styling from input text box */
+/* [from code tutor (lines 71 to 73)]: to remove broswer default border selection styling from input text box */
